--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,32 @@ body {
 input {
     text-align: right;
 }
+
+.ec-border {
+    border: 1px dotted gray;
+}
+
+.ec-num {
+    text-align: right;
+}
+
+#ec th {
+    border: 1px solid black;
+}
+
+#instructions {
+    display: inline-block;
+    cursor: pointer;
+}
+
+#instructions:hover {
+    background-color: rgb(241, 241, 241);
+}
+
+.backgroundGray {
+    background-color: rgb(241, 241, 241);
+}
+
+.displayNone {
+    display: none;
+}
